src/test/deca/context/invalid/created/SansObjet/WrongTypeArithmeticExp.deca
// Resultats :
//    Erreur contextuelle
//    Ligne 8 : Incompatible types for arithmetic operation: int + boolean

{
    int a = 1;
    boolean b = false;
    print(a + b);
}